error on mobile view, trying to fix it

--- a/css/web/carousel.css
+++ b/css/web/carousel.css
@@ -7,7 +7,7 @@
 
 .carousel-window { 
   aspect-ratio: 16/9;
-  overflow: hidden;
+  /* overflow: hidden; */
   width: 100%;
 }
 
@@ -18,6 +18,7 @@
 
 .carousel-image-container {
   display: flex;
+  justify-content: flex-start;
   height: 100%;
   transform: translateX(0);
   transition: transform .5s ease-in-out;
